该参数没有 global 级别
`set global tidb_opt_distinct_agg_push_down = 1`  change to `set global tidb_opt_distinct_agg_push_down = 1`

--- a/benchmark/v4.0-performance-benchmarking-with-tpch.md
+++ b/benchmark/v4.0-performance-benchmarking-with-tpch.md
@@ -92,7 +92,7 @@ learner_config.log-level: "info"
 
 ```sql
 set global tidb_allow_batch_cop = 1;
-set global tidb_opt_distinct_agg_push_down = 1;
+set session tidb_opt_distinct_agg_push_down = 1;
 set global tidb_distsql_scan_concurrency = 30;
 set global tidb_projection_concurrency = 16;
 set global tidb_hashagg_partial_concurrency = 16;
